--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background: black;
+    background-image: url("https://th.bing.com/th/id/R.48cc69fa6159907e428fc492e1260a71?rik=oYMnuYjb2bWKCA&pid=ImgRaw&r=0");
 }
 
 .header {
