--- a/index.css
+++ b/index.css
@@ -29,10 +29,9 @@ body {
 
 .amogus {
     position: absolute;
-    right: 4vw;
-    top: 4vw;
-    width: 15vw;
-    border-radius: 1vw;
+    right: 6vw;
+    top: 7vh;
+    height: 15vw;
     rotate: 45deg;
     transform: scaleX(-1);
 }
@@ -42,6 +41,5 @@ body {
     right: 4vw;
     bottom: 10vh;
     width: 15vw;
-    border-radius: 1vw;
     rotate: -225deg;
 }
