--- a/index.css
+++ b/index.css
@@ -53,15 +53,19 @@ body {
 }
 .flying-amongi.a {
     top: 10vh;
+    left: 10vw;
 }
 .flying-amongi.b {
     top: 50vh;
+    left: 50vw;
 }
 .flying-amongi.c {
     top: 30vh;
+    left: 30vw;
 }
 .flying-amongi.d {
     top: 70vh;
+    left: 70vw;
 }
 @keyframes flying-amongi {
     0% {left: -10vw;}
