--- a/index.css
+++ b/index.css
@@ -82,6 +82,22 @@ body {
     animation-timing-function: linear;
 }
 @keyframes osu {
-    0% {transform: rotateZ(0deg)}
-    100% {transform: rotateZ(360deg)}
+    0% {transform: rotateZ(0deg);}
+    100% {transform: rotateZ(360deg);}
+}
+
+.shh {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100vw;
+    transform: scale(0);
+    animation-name: shh;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+}
+@keyframes shh {
+    0% {transform: rotateZ(0deg);}
+    100% {transform: rotateZ(360deg);}
 }
