--- a/index.css
+++ b/index.css
@@ -94,7 +94,7 @@ body {
     transform: scale(0);
     animation-name: shh;
     animation-duration: 3s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     animation-timing-function: linear;
 }
 @keyframes shh {
