--- a/index.css
+++ b/index.css
@@ -5,7 +5,16 @@ body {
 .header {
     color: red;
     text-align: center;
-    font-size: 10vh
+    font-size: 10vh;
+    animation-name: header;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes header {
+    0% {color: rgb(0, 0, 255)}
+    50% {color: rgb(0, 255, 0)}
+    100% {color: rgb(255, 0, 0)}
 }
 
 .button {
@@ -76,6 +85,7 @@ body {
     position: absolute;
     width: 20vh;
     top: 1vh;
+    border=radius: 10vh;
     animation-name: osu;
     animation-duration: .4s;
     animation-iteration-count: infinite;
